# SEO-optimization

./: README.md  pyproject.toml
src/: seo_analysis.py
