[tool.poetry]
name = "seo-optimization"
version = "0.1.0"
description = "SEO analysis and insights for data driven SEO optimization"
authors = ["lishuai <lishuai.jing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tenacity = "^9.0.0"
pytrends = "^4.9.2"
plotly = "^5.24.1"
aiohttp = "^3.11.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
